aws-kubernetes/manifests/12-observability-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
