aws-kubernetes/manifests/05-producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recon-producer-app
  namespace: recon-platform
  labels:
    app: recon-producer-app
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: recon-producer-app
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"
      labels:
        app: recon-producer-app
    spec:
      serviceAccountName: recon-app-sa
      terminationGracePeriodSeconds: 45
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: producer
          image: 860510876120.dkr.ecr.ap-southeast-1.amazonaws.com/recon-producer-app:1.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
