aws-kubernetes/manifests/06-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recon-consumer-app
  namespace: recon-platform
  labels:
    app: recon-consumer-app
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: recon-consumer-app
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8082"
      labels:
        app: recon-consumer-app
    spec:
      serviceAccountName: recon-app-sa
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: consumer
          image: 860510876120.dkr.ecr.ap-southeast-1.amazonaws.com/recon-consumer-app:1.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 35
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 70
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "750m"
              memory: "768Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
