aws-kubernetes/manifests/07-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recon-dashboard-api
  namespace: recon-platform
  labels:
    app: recon-dashboard-api
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: recon-dashboard-api
  template:
    metadata:
      labels:
        app: recon-dashboard-api
    spec:
      serviceAccountName: recon-app-sa
      terminationGracePeriodSeconds: 45
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: dashboard-api
          image: 860510876120.dkr.ecr.ap-southeast-1.amazonaws.com/recon-dashboard-api:1.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
