aws-kubernetes/manifests/08-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibm-mq
  namespace: recon-platform
  labels:
    app: ibm-mq
spec:
  type: ClusterIP
  selector:
    app: ibm-mq
  ports:
    - name: mq
      port: 1414
      targetPort: 1414
    - name: console
      port: 9443
      targetPort: 9443
    - name: metrics
      port: 9157
      targetPort: 9157
---
apiVersion: v1
kind: Service
metadata:
  name: recon-producer-app
  namespace: recon-platform
spec:
  type: ClusterIP
  selector:
    app: recon-producer-app
  ports:
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: recon-consumer-app
  namespace: recon-platform
spec:
  type: ClusterIP
  selector:
    app: recon-consumer-app
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: recon-dashboard-api
  namespace: recon-platform
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: recon-dashboard-api
  ports:
    - name: http
      port: 80
      targetPort: 8083
