aws-kubernetes/manifests/11-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: recon-platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dashboard-ingress
  namespace: recon-platform
spec:
  podSelector:
    matchLabels:
      app: recon-dashboard-api
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8083
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apps-to-mq
  namespace: recon-platform
spec:
  podSelector:
    matchLabels:
      app: ibm-mq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: recon-producer-app
        - podSelector:
            matchLabels:
              app: recon-consumer-app
        - podSelector:
            matchLabels:
              app: recon-dashboard-api
      ports:
        - protocol: TCP
          port: 1414
        - protocol: TCP
          port: 9157
